--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Le conteneur du texte centré */
 .centered-text {
     position: absolute;
     top: 30%;
@@ -6,12 +5,123 @@
     transform: translate(-50%, -50%);
     text-align: center;
     color: white;
+}
+
+.centered-text h1{
+    font-family: Bradley Hand, cursive;
     font-size: 100px;
+    margin: 50px;
+}
+
+.centered-text p {
+    font-family: Bradley Hand, cursive;
+    font-size: 50px;
+    margin: 50px;
+}
+
+
+.gameText {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+}
+
+.gameText img {
+    margin: 0 auto;
+    display: block;
+}
+
+.gameText h1{
+    font-family: Bradley Hand, cursive;
+    font-size: 80px;
+    margin: 50px;
+}
+
+.gameText h2{
+    font-family: Bradley Hand, cursive;
+    font-size: 80px;
+    margin-top: 20%;
+}
+
+.gameText p {
+    font-family: Bradley Hand, cursive;
+    font-size: 50px;
+    margin: 50px;
+}
+
+
+.styled-input {
+    width: 300px;
+    height: 40px;
+    margin-top: 20px;
+    border: 2px solid white;
+    border-radius: 5px;
+    background: transparent;
+    color: white;
+    font-size: 18px;
+    text-align: center;
+}
+
+.button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-container img {
+    width: 800px;
+    height: auto;
+    margin-top: 20%;
+}
+
+.button-container a{
+    flex: 1;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 30%;
+    text-decoration: none;
+}
+
+.button-choices{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-choices a{
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-top: 30%;
+    text-decoration: none;
 }
 
 body {
-    background-image: url('images/welcomeBackground.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+}
+
+.btn-grad {
+    background-image: linear-gradient(to right, #ADD100 0%, #7B920A 51%, #ADD100 100%);
+    margin: 20px auto;
+    padding: 20px 50px;
+    text-align: center;
+    font-family: Bradley Hand, cursive;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+    font-size: 24px;
+}
+
+.btn-grad:hover {
+    background-position: right center;
+    color: #fff;
+    text-decoration: none;
 }
