--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,27 @@
 }
 
 
+.endText {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+}
+
+.endText h1{
+    font-family: Bradley Hand, cursive;
+    font-size: 80px;
+    margin: 50px;
+}
+
+.endText p{
+    font-family: Bradley Hand, cursive;
+    font-size: 50px;
+    margin: 50px;
+}
+
 .gameText {
     position: absolute;
     top: 10%;
@@ -111,7 +132,7 @@ h2 {
 
 .image-centre img {
     margin-left: 160%;
-    width: 100%; /* Redimensionner la div à la largeur de l'image */
+    width: 100%;
     height: 600px;
 }
 
@@ -125,14 +146,14 @@ h2 {
 
 .code-final img {
     margin-left: 160%;
-    width: 100%; /* Redimensionner la div à la largeur de l'image */
+    width: 100%;
     height: 600px;
 }
 
 .input-container {
-    display: flex; /* Utiliser un modèle de boîte flexible */
-    flex-direction: column; /* Aligner les éléments verticalement (un en dessous de l'autre) */
-    align-items: center; /* Centrer les éléments horizontalement */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .overlay {
@@ -166,4 +187,62 @@ h2 {
     background-position: right center;
     color: #fff;
     text-decoration: none;
+}
+
+.labyrinthe {
+    left:30%;
+    position: absolute;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    height: 750px;
+}
+
+#labyrinth {
+    width: 1000px;
+    height: 540px;
+    background-color: cyan;
+    position: relative;
+}
+
+#player {
+    width: 20px;
+    height: 20px;
+    background-color: black;
+    position: absolute;
+}
+
+.obstacle {
+    width: 20px;
+    height: 20px;
+    background-color: green;
+    position: absolute;
+}
+
+.goal {
+    width: 20px;
+    height: 20px;
+    background-color: yellow;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+
+#game-container {
+    width: 700px;
+    height: 400px;
+    background-color: #f0f0f0;
+    position: relative;
+    overflow: hidden;
+}
+
+#player2 {
+    width: 20px;
+    height: 20px;
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
 }
