--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ h2 {
 
 .gameText h1{
     font-family: Bradley Hand, cursive;
-    font-size: 80px;
+    font-size: 60px;
     margin: 50px;
 }
 
@@ -118,6 +118,7 @@ h2 {
 }
 
 .button-choices{
+    margin-top: 5%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,27 +135,33 @@ h2 {
     display: flex;
     justify-content: center;    
     align-items: center;
-    height: 750px;
+    height: 300px;
 }
 
 .image-centre img {
-    margin-left: 160%;
+    margin-top: 250px;
+    margin-left: 140%;
     width: 100%;
-    height: 600px;
+    height: 400px;
+    border-radius: 10%;
+    border-width: 5px;
+    border-style: solid;
+    border-color: white;
 }
 
 .code-final {
+    right: 60%;
     position: absolute;
     display: flex;
     justify-content: center;    
     align-items: center;
-    height: 750px;
+    height: 500px;
 }
 
 .code-final img {
     margin-left: 160%;
     width: 100%;
-    height: 600px;
+    height: 500px;
 }
 
 .input-container {
@@ -165,8 +172,8 @@ h2 {
 
 .overlay {
     position: absolute;
-    top: 440px;
-    left: 1340px;
+    top: 1px;
+    left: 770px;
 }
 
 .overlay img {
@@ -211,17 +218,18 @@ h2 {
 }
 
 .labyrinthe {
-    left:30%;
+    left:25%;
     position: absolute;
     display: flex;
     justify-content: center;    
     align-items: center;
-    height: 750px;
+    height: 400px;
+    margin-top: 5%;
 }
 
 #labyrinth {
-    width: 1000px;
-    height: 540px;
+    width: 760px;
+    height: 420px;
     background-color: cyan;
     position: relative;
 }
